fix: padroniza delete(), @Transactional, updateEntity correto — lote 3 (ClienteTipo, Endereco, HistoricoLocalizacao, ImagemProjeto, Inspecao, Insumo, Notificacao, Comunicacao, ComunicacaoAux, Cliente)