@@ -5,11 +5,11 @@ import com.br.pruma.application.dto.response.ImagemProjetoResponseDTO;
 import com.br.pruma.application.dto.update.ImagemProjetoUpdateDTO;
 import com.br.pruma.application.mapper.ImagemProjetoMapper;
 import com.br.pruma.application.service.ImagemProjetoService;
+import com.br.pruma.config.RecursoNaoEncontradoException;
 import com.br.pruma.core.domain.ImagemProjeto;
 import com.br.pruma.core.domain.Projeto;
 import com.br.pruma.core.repository.ImagemProjetoRepository;
 import com.br.pruma.core.repository.ProjetoRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +30,8 @@ public class ImagemProjetoServiceImpl implements ImagemProjetoService {
     @Override
     public ImagemProjetoResponseDTO create(ImagemProjetoRequestDTO dto) {
         Projeto projeto = projetoRepository.findById(dto.getProjetoId())
-                .orElseThrow(() -> new EntityNotFoundException("Projeto não encontrado: " + dto.getProjetoId()));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Projeto com ID " + dto.getProjetoId() + " não encontrado."));
         ImagemProjeto entity = mapper.toEntity(dto);
         entity.setProjeto(projeto);
         return mapper.toResponse(repository.save(entity));
@@ -41,13 +41,16 @@ public class ImagemProjetoServiceImpl implements ImagemProjetoService {
     @Transactional(readOnly = true)
     public ImagemProjetoResponseDTO getById(Integer id) {
         return mapper.toResponse(repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("ImagemProjeto não encontrada: " + id)));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "ImagemProjeto com ID " + id + " não encontrada.")));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<ImagemProjetoResponseDTO> listAll() {
-        return repository.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -59,22 +62,25 @@ public class ImagemProjetoServiceImpl implements ImagemProjetoService {
     @Override
     @Transactional(readOnly = true)
     public List<ImagemProjetoResponseDTO> listByProjeto(Integer projetoId) {
-        return repository.findAllByProjeto_Id(projetoId).stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAllByProjeto_Id(projetoId).stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
     public ImagemProjetoResponseDTO update(Integer id, ImagemProjetoUpdateDTO dto) {
         ImagemProjeto entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("ImagemProjeto não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "ImagemProjeto com ID " + id + " não encontrada."));
         mapper.updateFromDto(dto, entity);
         return mapper.toResponse(repository.save(entity));
     }
 
     @Override
     public void delete(Integer id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("ImagemProjeto não encontrada: " + id);
-        }
-        repository.deleteById(id);
+        ImagemProjeto entity = repository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "ImagemProjeto com ID " + id + " não encontrada."));
+        repository.delete(entity);
     }
 }
