@@ -5,11 +5,11 @@ import com.br.pruma.application.dto.response.InspecaoResponseDTO;
 import com.br.pruma.application.dto.update.InspecaoUpdateDTO;
 import com.br.pruma.application.mapper.InspecaoMapper;
 import com.br.pruma.application.service.InspecaoService;
+import com.br.pruma.config.RecursoNaoEncontradoException;
 import com.br.pruma.core.domain.Inspecao;
 import com.br.pruma.core.domain.Projeto;
 import com.br.pruma.core.repository.InspecaoRepository;
 import com.br.pruma.core.repository.ProjetoRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +30,8 @@ public class InspecaoServiceImpl implements InspecaoService {
     @Override
     public InspecaoResponseDTO create(InspecaoRequestDTO dto) {
         Projeto projeto = projetoRepository.findById(dto.getProjetoId())
-                .orElseThrow(() -> new EntityNotFoundException("Projeto não encontrado: " + dto.getProjetoId()));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Projeto com ID " + dto.getProjetoId() + " não encontrado."));
         Inspecao entity = mapper.toEntity(dto);
         entity.setProjeto(projeto);
         return mapper.toResponse(repository.save(entity));
@@ -41,13 +41,16 @@ public class InspecaoServiceImpl implements InspecaoService {
     @Transactional(readOnly = true)
     public InspecaoResponseDTO getById(Integer id) {
         return mapper.toResponse(repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Inspeção não encontrada: " + id)));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Inspeção com ID " + id + " não encontrada.")));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<InspecaoResponseDTO> listAll() {
-        return repository.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -59,16 +62,20 @@ public class InspecaoServiceImpl implements InspecaoService {
     @Override
     @Transactional(readOnly = true)
     public List<InspecaoResponseDTO> listByProjeto(Integer projetoId) {
-        return repository.findAllByProjeto_Id(projetoId).stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAllByProjeto_Id(projetoId).stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
     public InspecaoResponseDTO update(Integer id, InspecaoUpdateDTO dto) {
         Inspecao entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Inspeção não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Inspeção com ID " + id + " não encontrada."));
         if (dto.getProjetoId() != null) {
             Projeto projeto = projetoRepository.findById(dto.getProjetoId())
-                    .orElseThrow(() -> new EntityNotFoundException("Projeto não encontrado: " + dto.getProjetoId()));
+                    .orElseThrow(() -> new RecursoNaoEncontradoException(
+                            "Projeto com ID " + dto.getProjetoId() + " não encontrado."));
             entity.setProjeto(projeto);
         }
         mapper.updateFromDto(dto, entity);
@@ -78,9 +85,11 @@ public class InspecaoServiceImpl implements InspecaoService {
     @Override
     public InspecaoResponseDTO replace(Integer id, InspecaoRequestDTO dto) {
         repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Inspeção não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Inspeção com ID " + id + " não encontrada."));
         Projeto projeto = projetoRepository.findById(dto.getProjetoId())
-                .orElseThrow(() -> new EntityNotFoundException("Projeto não encontrado: " + dto.getProjetoId()));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Projeto com ID " + dto.getProjetoId() + " não encontrado."));
         Inspecao entity = mapper.toEntity(dto);
         entity.setId(id);
         entity.setProjeto(projeto);
@@ -89,9 +98,9 @@ public class InspecaoServiceImpl implements InspecaoService {
 
     @Override
     public void delete(Integer id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("Inspeção não encontrada: " + id);
-        }
-        repository.deleteById(id);
+        Inspecao entity = repository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Inspeção com ID " + id + " não encontrada."));
+        repository.delete(entity);
     }
 }
