@@ -5,9 +5,9 @@ import com.br.pruma.application.dto.response.NotificacaoResponseDTO;
 import com.br.pruma.application.dto.update.NotificacaoUpdateDTO;
 import com.br.pruma.application.mapper.NotificacaoMapper;
 import com.br.pruma.application.service.NotificacaoService;
+import com.br.pruma.config.RecursoNaoEncontradoException;
 import com.br.pruma.core.domain.Notificacao;
 import com.br.pruma.core.repository.NotificacaoRepository;
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,13 +34,16 @@ public class NotificacaoServiceImpl implements NotificacaoService {
     @Transactional(readOnly = true)
     public NotificacaoResponseDTO getById(Integer id) {
         return mapper.toResponse(repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Notificação não encontrada: " + id)));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Notificação com ID " + id + " não encontrada.")));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<NotificacaoResponseDTO> listAll() {
-        return repository.findAll().stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
@@ -53,13 +55,16 @@ public class NotificacaoServiceImpl implements NotificacaoService {
     @Override
     @Transactional(readOnly = true)
     public List<NotificacaoResponseDTO> listByUsuario(Integer usuarioId) {
-        return repository.findAllByUsuario_Id(usuarioId).stream().map(mapper::toResponse).collect(Collectors.toList());
+        return repository.findAllByUsuario_Id(usuarioId).stream()
+                .map(mapper::toResponse)
+                .toList();
     }
 
     @Override
     public NotificacaoResponseDTO marcarComoLida(Integer id) {
         Notificacao entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Notificação não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Notificação com ID " + id + " não encontrada."));
         entity.setLida(true);
         return mapper.toResponse(repository.save(entity));
     }
@@ -67,16 +72,17 @@ public class NotificacaoServiceImpl implements NotificacaoService {
     @Override
     public NotificacaoResponseDTO update(Integer id, NotificacaoUpdateDTO dto) {
         Notificacao entity = repository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Notificação não encontrada: " + id));
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Notificação com ID " + id + " não encontrada."));
         mapper.updateFromDto(dto, entity);
         return mapper.toResponse(repository.save(entity));
     }
 
     @Override
     public void delete(Integer id) {
-        if (!repository.existsById(id)) {
-            throw new EntityNotFoundException("Notificação não encontrada: " + id);
-        }
-        repository.deleteById(id);
+        Notificacao entity = repository.findById(id)
+                .orElseThrow(() -> new RecursoNaoEncontradoException(
+                        "Notificação com ID " + id + " não encontrada."));
+        repository.delete(entity);
     }
 }
